[package]
name = "vecarray"
version = "0.1.2"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"
description = "Generic array backed by a vector."
license = "Apache-2.0"

[dependencies]
typenum = "1.10"
serde = { version = "1.0", default-features = false, optional = true, features = ["alloc"] }
parity-codec = { version = "4.0", default-features = false, optional = true }

[features]
default = ["std"]
std = ["serde/std", "parity-codec/std"]